--- a/htmldog.html
+++ b/htmldog.html
@@ -40,5 +40,12 @@
                 <td>Row 3, cell 3</td>
             </tr>
         </table>
+        
+        <h5>Forms!</h5>
+            <p><input /></p>
+            <p><input type="password" /></p>
+            <p><input type="checkbox"</p>
+            <p><input type="radio"</p>
+            <p><input type="submit"</p>        
     </body>
 </html>
