creating htmldog folder

--- a/html_dog/htmldog.html
+++ b/html_dog/htmldog.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- This is a comment, btw -->
 <html>
     <head>
         <title>My first web page</title>
@@ -46,6 +47,16 @@
             <p><input type="password" /></p>
             <p><input type="checkbox"</p>
             <p><input type="radio"</p>
-            <p><input type="submit"</p>        
+            <p><input type="submit"</p>
+        
+        <h6>Text area</h6>
+            <p><textarea rows="5" cols="20">A bunch of text</textarea></p>
+        
+        <h6>Select</h6>
+            <select>
+                <option>Option 1</option>
+                <option>Option 2</option>
+                <option value="third option">Option 3</option>
+            </select>
     </body>
 </html>
