finished CSS intermediate

--- a/html_dog/CSS_tutorial/extrenal.html
+++ b/html_dog/CSS_tutorial/extrenal.html
@@ -26,5 +26,13 @@
         </div>
         
         <a ref="www.google.com">Google it!</a>
+        
+        <div id="navigation">
+            <ol>
+                <li><a href="www.facebook.com">Facebook</a></li>
+                <li><a href="www.youtube.com">Youtube</a></li>
+                <li><a href="www.stackoverflow.com">StackOverFlow</a></li>
+            </ol>
+        </div>
     </body>
 </html>
