Home page "working"

--- a/google-homepage/index.html
+++ b/google-homepage/index.html
@@ -1,13 +1,33 @@
+<!-- made based on Google layout -->
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="index.css"/>
+        <link rel="stylesheet" type="text/css" href="index.css">
         <title></title>
     </head>
     <body>
-        <img id="logo" src="google-logo.png" alt="Google logo"/>
-        <form>
-            Search:<input type="text" name="search"<br>
+        <div class="header" id="right">
+            <a href="#">Gmail</a>
+            <a href="#">Images</a>
+            <a href="#">Sign In</a>
+        </div>
+        <div class="center">
+            <img id="logo" src="google-logo.png" alt="Google logo"/>
+            <form>
+            <input id="search" type="text" name="search"><br>
+            <input type="submit" value="Google Search">
+            <input type="submit" value="I'm Feeling Lucky">
         </form>
+        </div>
+        <div class="footer" id="left">
+            <a href="#">Advertising</a>
+            <a href="#">Business</a>
+            <a href="#">About</a>
+        </div>
+        <div class="footer" id="right">
+            <a href="#">Privacy</a>
+            <a href="#">Terms</a>
+            <a href="#">Settings</a>
+        </div>
     </body>    
 </html>
