Starting changing to a more Material design

--- a/google-homepage/index.html
+++ b/google-homepage/index.html
@@ -6,28 +6,32 @@
         <title></title>
     </head>
     <body>
-        <div class="header" id="right">
-            <a href="#">Gmail</a>
-            <a href="#">Images</a>
-            <a href="#">Sign In</a>
+        <div class="header">
+            <div id="right">
+                <a href="#1">Gmail</a>
+                <a href="#2">Images</a>
+                <a href="#3">Sign In</a>
+            </div>
         </div>
         <div class="center">
             <img id="logo" src="google-logo.png" alt="Google logo"/>
             <form>
-            <input id="search" type="text" name="search"><br>
+            <input type="text" name="search"><br>
             <input type="submit" value="Google Search">
             <input type="submit" value="I'm Feeling Lucky">
         </form>
         </div>
-        <div class="footer" id="left">
-            <a href="#">Advertising</a>
-            <a href="#">Business</a>
-            <a href="#">About</a>
-        </div>
-        <div class="footer" id="right">
-            <a href="#">Privacy</a>
-            <a href="#">Terms</a>
-            <a href="#">Settings</a>
+        <div class="footer">
+            <div id="left">
+                <a href="#4">Advertising</a>
+                <a href="#5">Business</a>
+                <a href="#6">About</a>
+            </div>
+            <div id="right">
+                <a href="#7">Privacy</a>
+                <a href="#8">Terms</a>
+                <a href="#9">Settings</a>
+            </div>
         </div>
     </body>    
 </html>
