--- a/etch_a_sketch/index.html
+++ b/etch_a_sketch/index.html
@@ -1,16 +1,24 @@
 <!-- Articles that helped me out:
-        *   http://j4n.co/blog/Creating-your-own-css-grid-system
+    *   https://www.w3schools.com/css/css_table.asp
+    *   https://material.io/guidelines/style/color.html#color-color-palette
+    *   https://www.w3schools.com/css/css3_buttons.asp
 -->
 
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <title>Etch a Sketch</title>
-        <link ref="stylesheet" type="text/css" href="css/sheet.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    </head>
-    <body>
-        <div class="grid"></div>
-    </body>
+<head>
+	<title>Etch-A-Sketch</title>
+    <link rel="stylesheet" type="text/css" href="css/sheet.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script type="text/javascript" src="js/jquery.js"></script>
+</head>
+<body>
+	<div class="header">
+		<h1 id = "header">Etch-A-Sketch</h1>
+		<button class="button" onclick="newTable()">Clear</button>
+	</div>
+
+	<div class="container"></div>
+</body>
 </html>
